Quick fix for font weight on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -527,6 +527,10 @@ h4 {
 	}
 }
 
+@media only screen and (max-device-width: 480px) {
+	.cusecNav * { font-weight: 500; }
+}
+
 /* Media Queries
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
